--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
-        "project/prog4-userintent2querymapper",
-        "project/prog3-ui/src"
+        "project\\prog3-ui\\src",
+        "project\\prog4-userintent2querymapper",
+        "project\\prog5-sessionlogger"
     ]
 }
